--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-
+        <a class="nav-link" (click)="onOpenModal(null, 'add')">Add Product <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -15,7 +15,7 @@
     </form>
   </div>
 </nav>
-<div class="container">
+<div class="container" id = "main-container">
   <div class="row">
     <div *ngFor="let product of products" class="ibox">
       <div class="ibox-content product-box">
@@ -89,13 +89,52 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to delete employee {{deleteProduct?.name}}?</p>
+        <p>Are you sure you want to delete product {{deleteProduct?.name}}?</p>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
           <button (click)="onDeleteProduct(deleteProduct.id)" class="btn btn-danger" data-dismiss="modal">Yes</button>
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<!-- Update Modal -->
+<div class="modal fade" id="updateProductModal" tabindex="-1" role="dialog" aria-labelledby="productUpdateModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+     <div class="modal-content">
+        <div class="modal-header">
+           <h5 class="modal-title" id="updateProductModalLabel">Update Product {{updateProduct?.name}}</h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+           </button>
+        </div>
+        <div class="modal-body">
+           <form #editForm="ngForm">
+              <div class="form-group">
+                 <label for="name">Name</label>
+                 <input type="text" ngModel="{{updateProduct?.name}}" name="name" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Name">
+              </div>
+              <input type="hidden" ngModel="{{updateProduct?.id}}" name="id" class="form-control" id="id" placeholder="id">
+              <div class="form-group">
+                 <label for="type">type</label>
+                 <input type="email" ngModel="{{updateProduct?.type}}" name="email" class="form-control" id="type" placeholder="type">
+              </div>
+              <div class="form-group">
+                 <label for="milliliter">Milliliter</label>
+                 <input type="text" ngModel="{{updateProduct?.milliliter}}" name="milliliter" class="form-control" id="milliliter" placeholder="Job title">
+              </div>
+              <div class="form-group">
+                 <label for="phone">Image URL</label>
+                 <input type="text" ngModel="{{updateProduct?.imageUrl}}" name="imageUrl" class="form-control" id="imageUrl" placeholder="Image URL">
+              </div>
+              <div class="modal-footer">
+                 <button type="button" id="" data-dismiss="modal" class="btn btn-secondary">Close</button>
+                 <button (click)="onUpdateProduct(editForm.value)" data-dismiss="modal" class="btn btn-primary" >Save changes</button>
+              </div>
+           </form>
+        </div>
+     </div>
   </div>
 </div>
 
