--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -110,24 +110,24 @@
            </button>
         </div>
         <div class="modal-body">
-           <form #editForm="ngForm">
-              <div class="form-group">
-                 <label for="name">Name</label>
-                 <input type="text" ngModel="{{updateProduct?.name}}" name="name" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Name">
-              </div>
-              <input type="hidden" ngModel="{{updateProduct?.id}}" name="id" class="form-control" id="id" placeholder="id">
-              <div class="form-group">
-                 <label for="type">type</label>
-                 <input type="email" ngModel="{{updateProduct?.type}}" name="email" class="form-control" id="type" placeholder="type">
-              </div>
-              <div class="form-group">
-                 <label for="milliliter">Milliliter</label>
-                 <input type="text" ngModel="{{updateProduct?.milliliter}}" name="milliliter" class="form-control" id="milliliter" placeholder="Job title">
-              </div>
-              <div class="form-group">
-                 <label for="phone">Image URL</label>
-                 <input type="text" ngModel="{{updateProduct?.imageUrl}}" name="imageUrl" class="form-control" id="imageUrl" placeholder="Image URL">
-              </div>
+          <form #editForm="ngForm">
+             <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" ngModel="{{updateProduct?.name}}" name="name" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Name">
+             </div>
+             <input type="hidden" ngModel="{{updateProduct?.id}}" name="id" class="form-control" id="id" placeholder="Email">
+             <div class="form-group">
+                <label for="type">Type</label>
+                <input type="text" ngModel="{{updateProduct?.type}}" name="type" class="form-control" id="type" placeholder="Type">
+             </div>
+             <div class="form-group">
+                <label for="milliliter">Milliliter</label>
+                <input type="text" ngModel="{{updateProduct?.milliliter}}" name="milliliter" class="form-control" id="milliliter" placeholder="Milliliter">
+             </div>
+             <div class="form-group">
+                <label for="phone">Image URL</label>
+                <input type="text" ngModel="{{updateProduct?.imageUrl}}" name="imageUrl" class="form-control" id="imageUrl" placeholder="Image URL">
+             </div>
               <div class="modal-footer">
                  <button type="button" id="" data-dismiss="modal" class="btn btn-secondary">Close</button>
                  <button (click)="onUpdateProduct(editForm.value)" data-dismiss="modal" class="btn btn-primary" >Save changes</button>
