--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import url('https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css');
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
 
-body{;
+body{
   background:#eee;
 }
 .container{
